tests/kulezi_tests/good/str_add.lat
int main() {
    string a = "abc";
    string b = "def";
    printString(a + b);
    return 0;
}