tests/kulezi_tests/bad/global_vs_method.lat
class A {
    int main() {
        return 0;
    }
}

int main() {
    A.main();
    return 0;
}